--- a/styles/main.css
+++ b/styles/main.css
@@ -1,10 +1,10 @@
-div {
+/*div {
 	background-color: azure;
 	border: 1px solid aquamarine;
 	padding: 30px;
-}
-section {
+}*/
+/*section {
 	border: 1px solid #FF99BC;
 	margin: 16px 0;
 	padding: 0 16px;
-}
+}*/
